@@ -86,8 +86,8 @@ cmd_debug::run(cmdline::ui* ui, const cmdline::parsed_cmdline& cmdline,
         cmdline.get_option< cmdline::path_option >("stdout"),
         cmdline.get_option< cmdline::path_option >("stderr"));
 
-    ui->out_raw(F("%s  ->  %s") % cli::format_test_case_id(result.test_case) %
-                cli::format_result(result.test_result));
+    ui->out(F("%s  ->  %s") % cli::format_test_case_id(result.test_case) %
+            cli::format_result(result.test_result));
 
     return result.test_result.good() ? EXIT_SUCCESS : EXIT_FAILURE;
 }
