@@ -67,7 +67,7 @@ cmdline::ui::~ui(void)
 /// \param message The line to print, without the trailing newline character.
 /// \param newline Whether to append a newline to the message or not.
 void
-cmdline::ui::err_raw(const std::string& message, const bool newline)
+cmdline::ui::err(const std::string& message, const bool newline)
 {
     PRE(message.empty() || message[message.length() - 1] != '\n');
     LI(F("stderr: %s") % message);
@@ -88,7 +88,7 @@ cmdline::ui::err_raw(const std::string& message, const bool newline)
 /// \param message The line to print, without the trailing newline character.
 /// \param newline Whether to append a newline to the message or not.
 void
-cmdline::ui::out_raw(const std::string& message, const bool newline)
+cmdline::ui::out(const std::string& message, const bool newline)
 {
     PRE(message.empty() || message[message.length() - 1] != '\n');
     LI(F("stdout: %s") % message);
@@ -152,29 +152,13 @@ cmdline::ui::screen_width(void) const
 }
 
 
-/// Writes a line to stderr.
-///
-/// \param message The line to print, without the trailing newline character.
-void
-cmdline::ui::err(const std::string& message)
-{
-    const optional< std::size_t > max_width = screen_width();
-    if (max_width) {
-        const std::vector< std::string > lines = text::refill(
-            message, max_width.get());
-        for (std::vector< std::string >::const_iterator iter = lines.begin();
-             iter != lines.end(); iter++)
-            err_raw(*iter);
-    } else
-        err_raw(message);
-}
-
-
 /// Writes a line to stdout.
 ///
+/// The line is wrapped to fit on screen.
+///
 /// \param message The line to print, without the trailing newline character.
 void
-cmdline::ui::out(const std::string& message)
+cmdline::ui::out_wrap(const std::string& message)
 {
     const optional< std::size_t > max_width = screen_width();
     if (max_width) {
@@ -182,40 +166,9 @@ cmdline::ui::out(const std::string& message)
             message, max_width.get());
         for (std::vector< std::string >::const_iterator iter = lines.begin();
              iter != lines.end(); iter++)
-            out_raw(*iter);
+            out(*iter);
     } else
-        out_raw(message);
-}
-
-
-/// Writes a line to stderr with a leading tag.
-///
-/// If the line does not fit on the current screen width, the line is broken
-/// into pieces and the tag is repeated on every line.
-///
-/// \param tag The leading line tag.
-/// \param message The message to be printed, without the trailing newline
-///     character.
-/// \param repeat If true, print the tag on every line; otherwise, indent the
-///     text of all lines to match the width of the tag on the first line.
-void
-cmdline::ui::err_tag(const std::string& tag, const std::string& message,
-                     const bool repeat)
-{
-    const optional< std::size_t > max_width = screen_width();
-    if (max_width && max_width.get() > tag.length()) {
-        const std::vector< std::string > lines = text::refill(
-            message, max_width.get() - tag.length());
-        for (std::vector< std::string >::const_iterator iter = lines.begin();
-             iter != lines.end(); iter++) {
-            if (repeat || iter == lines.begin())
-                err_raw(F("%s%s") % tag % *iter);
-            else
-                err_raw(F("%s%s") % std::string(tag.length(), ' ') % *iter);
-        }
-    } else {
-        err_raw(F("%s%s") % tag % message);
-    }
+        out(message);
 }
 
 
@@ -230,8 +183,8 @@ cmdline::ui::err_tag(const std::string& tag, const std::string& message,
 /// \param repeat If true, print the tag on every line; otherwise, indent the
 ///     text of all lines to match the width of the tag on the first line.
 void
-cmdline::ui::out_tag(const std::string& tag, const std::string& message,
-                     const bool repeat)
+cmdline::ui::out_tag_wrap(const std::string& tag, const std::string& message,
+                          const bool repeat)
 {
     const optional< std::size_t > max_width = screen_width();
     if (max_width && max_width.get() > tag.length()) {
@@ -240,12 +193,12 @@ cmdline::ui::out_tag(const std::string& tag, const std::string& message,
         for (std::vector< std::string >::const_iterator iter = lines.begin();
              iter != lines.end(); iter++) {
             if (repeat || iter == lines.begin())
-                out_raw(F("%s%s") % tag % *iter);
+                out(F("%s%s") % tag % *iter);
             else
-                out_raw(F("%s%s") % std::string(tag.length(), ' ') % *iter);
+                out(F("%s%s") % std::string(tag.length(), ' ') % *iter);
         }
     } else {
-        out_raw(F("%s%s") % tag % message);
+        out(F("%s%s") % tag % message);
     }
 }
 
@@ -271,7 +224,7 @@ cmdline::ui::out_table(const text::table& table,
     const std::vector< std::string > lines = formatter.format(table);
     for (std::vector< std::string >::const_iterator iter = lines.begin();
          iter != lines.end(); ++iter)
-        out_raw(prefix + *iter);
+        out(prefix + *iter);
 }
 
 
@@ -285,7 +238,7 @@ cmdline::print_error(ui* ui_, const std::string& message)
 {
     PRE(!message.empty() && message[message.length() - 1] != '.');
     LE(message);
-    ui_->err_tag(F("%s: E: ") % cmdline::progname(), F("%s.") % message);
+    ui_->err(F("%s: E: %s.") % cmdline::progname() % message);
 }
 
 
@@ -299,7 +252,7 @@ cmdline::print_info(ui* ui_, const std::string& message)
 {
     PRE(!message.empty() && message[message.length() - 1] != '.');
     LI(message);
-    ui_->err_tag(F("%s: I: ") % cmdline::progname(), F("%s.") % message);
+    ui_->err(F("%s: I: %s.") % cmdline::progname() % message);
 }
 
 
@@ -313,5 +266,5 @@ cmdline::print_warning(ui* ui_, const std::string& message)
 {
     PRE(!message.empty() && message[message.length() - 1] != '.');
     LW(message);
-    ui_->err_tag(F("%s: W: ") % cmdline::progname(), F("%s.") % message);
+    ui_->err(F("%s: W: %s.") % cmdline::progname() % message);
 }
