@@ -16,6 +16,11 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
   name.  The format name is implied by the file being loaded, so there
   is no use in the caller having to specify it.
 
+* Reduced automatic screen line wrapping of messages to the help command
+  and the output of tables by db-exec.  Wrapping any other messages
+  (specially anything going to stderr) was very annoying because it
+  prevented natural copy/pasting of text.
+
 * Increased the granularity of the error codes returned by kyua(1) to
   denote different error conditions.  This avoids the overload of '1'
   to indicate both "expected" errors from specific subcommands from
